# HIDE-Controller

./: CMakeLists.txt  HIDE-Controller.c  LICENSE
src/: HIDE-Controller.cpp  usb_descriptors.c
